--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,10 +36,10 @@ layout: default
           style="max-width: 20rem;"
           class="mb-2">
           
-    <p class="card-text">
-      Some quick example text to build on the card title and make up the bulk of the card's content.
+   <p class="card-text">
+      {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+        <span class="post-meta">{{ post.date | date: date_format }}</span>
     </p>
-    <b-button href="#" variant="primary">Go somewhere</b-button>
   </b-card>
 </b-link>
   {% endfor %}
